--- a/.github/workflows/github-actions-push-images.yml
+++ b/.github/workflows/github-actions-push-images.yml
@@ -23,9 +23,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PAT }}
       
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_USERNAME }}
+          password: ${{ secrets.GH_TOKEN }}
+      
       - name: Build and push Docker images to Docker Hub
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mini-monitoring:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/mini-monitoring:latest
+            ghcr.io/${{ secrets.GH_USERNAME }}/mini-monitoring:latest
