--- a/.github/workflows/github-actions-push-images.yml
+++ b/.github/workflows/github-actions-push-images.yml
@@ -37,4 +37,4 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/mini-monitoring:latest
-            ghcr.io/${{ secrets.GH_USERNAME }}/mini-monitoring:latest
+            ghcr.io/${{ github.repository_owner }}/mini-monitoring:latest
