--- a/.github/workflows/main_mini-monitor.yml
+++ b/.github/workflows/main_mini-monitor.yml
@@ -24,16 +24,16 @@ jobs:
       - name: Log in to container registry
         uses: docker/login-action@v2
         with:
-          registry: docker.io/
-          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_31E7D1C984FE4852AAFFF72A99AB39BC }}
-          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_87375E4025CA4BCD893EC01E1640B679 }}
+          registry: https://index.docker.io/
+          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_468885AD04F04595BE9201B3A84049C5 }}
+          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_DDA37EF2D35D4861A87255406C453E6F }}
 
       - name: Build and push container image to registry
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_31E7D1C984FE4852AAFFF72A99AB39BC }}/pallandos/mini-monitoring:${{ github.sha }}
+          tags: index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_468885AD04F04595BE9201B3A84049C5 }}/mini-monitoring:${{ github.sha }}
           file: ./Dockerfile
 
   deploy:
@@ -49,9 +49,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D889127FC6CB49858FC0A621DF71C578 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CF1DCB19FB294896A2868F971A315282 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6269100F141047379D6478EF2744B727 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_3BBCC627926B486BA4D611FD5DE8371A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F9F6F003B3884A238E71806C61013D99 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_097F6750DEBE4A52B1B230A1CF787DC6 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -59,5 +59,5 @@ jobs:
         with:
           app-name: 'mini-monitor'
           slot-name: 'Production'
-          images: 'docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_31E7D1C984FE4852AAFFF72A99AB39BC }}/pallandos/mini-monitoring:${{ github.sha }}'
+          images: 'index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_468885AD04F04595BE9201B3A84049C5 }}/mini-monitoring:${{ github.sha }}'
           
