--- a/.github/workflows/main_mini-monitor.yml
+++ b/.github/workflows/main_mini-monitor.yml
@@ -24,16 +24,16 @@ jobs:
       - name: Log in to container registry
         uses: docker/login-action@v2
         with:
-          registry: index.docker.io/
-          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_8405DB64FF014213AD9F11291EAD3423 }}
-          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_2602181627764BF599DFAB75A828A723 }}
+          registry: docker.io/
+          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_2031B223D42947DD8C1A15E492D0D74B }}
+          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_818691BF8B8D4992B827BC02699B8724 }}
 
       - name: Build and push container image to registry
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_8405DB64FF014213AD9F11291EAD3423 }}/pallandos/mini-monitoring:${{ github.sha }}
+          tags: docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_2031B223D42947DD8C1A15E492D0D74B }}/pallandos/mini-monitoring:${{ github.sha }}
           file: ./Dockerfile
 
   deploy:
@@ -49,9 +49,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_127DDC75BE144160B33B11440E001204 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_18D776E926E94EFE8707714134C70D30 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3E39C92D7EFB4AFE8E31530463A0744A }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_675B762B812B4265824E2C10B122270E }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FCECC9EAEB3A4074AEA52668B4C62A16 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A45301181BC74C9F915BC6B4C1FB6487 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -59,5 +59,5 @@ jobs:
         with:
           app-name: 'mini-monitor'
           slot-name: 'Production'
-          images: 'index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_8405DB64FF014213AD9F11291EAD3423 }}/pallandos/mini-monitoring:${{ github.sha }}'
+          images: 'docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_2031B223D42947DD8C1A15E492D0D74B }}/pallandos/mini-monitoring:${{ github.sha }}'
           
