--- a/.github/workflows/main_mini-monitor.yml
+++ b/.github/workflows/main_mini-monitor.yml
@@ -25,15 +25,15 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: docker.io/
-          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_2031B223D42947DD8C1A15E492D0D74B }}
-          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_818691BF8B8D4992B827BC02699B8724 }}
+          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_B1FAAEC422D9467396238AC0E9D9A753 }}
+          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_2D0FF06C07BF418E86516865800AA908 }}
 
       - name: Build and push container image to registry
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_2031B223D42947DD8C1A15E492D0D74B }}/pallandos/mini-monitoring:${{ github.sha }}
+          tags: docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_B1FAAEC422D9467396238AC0E9D9A753 }}/mini-monitoring:${{ github.sha }}
           file: ./Dockerfile
 
   deploy:
@@ -49,9 +49,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_675B762B812B4265824E2C10B122270E }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FCECC9EAEB3A4074AEA52668B4C62A16 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A45301181BC74C9F915BC6B4C1FB6487 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_314BC682361141DFAC4F76AFBEDDDA7D }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0A1CA250446F4FD9935C13117F421DFB }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E66F9B8703744C61BA3665C8019C97F0 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -59,5 +59,5 @@ jobs:
         with:
           app-name: 'mini-monitor'
           slot-name: 'Production'
-          images: 'docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_2031B223D42947DD8C1A15E492D0D74B }}/pallandos/mini-monitoring:${{ github.sha }}'
+          images: 'docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_B1FAAEC422D9467396238AC0E9D9A753 }}/mini-monitoring:${{ github.sha }}'
           
