--- a/.github/workflows/main_mini-monitor.yml
+++ b/.github/workflows/main_mini-monitor.yml
@@ -60,4 +60,4 @@ jobs:
       
       - name: Trigger Azure webhook
         run: |
-          curl -X POST "{{ secrets.AZURE_WEBHOOK_URL }}"
+          curl -X POST "${{ secrets.AZURE_WEBHOOK_URL }}"
