--- a/.github/workflows/main_mini-monitor.yml
+++ b/.github/workflows/main_mini-monitor.yml
@@ -54,10 +54,11 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/mini-monitoring:light
             ghcr.io/${{ secrets.GH_USERNAME }}/mini-monitoring:latest
       
       - name: Trigger Azure webhook
         run: |
-          curl -v -X POST '${{ secrets.AZURE_WEBHOOK_URL }}' -H "Content-Type: application/json" -d '{}'
+          curl -X POST '${{ secrets.AZURE_WEBHOOK_URL }}' -H "Content-Type: application/json" -d '{}'
